# stable_po_pre_commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGES.md  LICENCE  Pipfile  README.md  setup.cfg
src/stable_po_pre_commit/: cli.py
tests/: test_wrapper.py
