[mypy]
namespace_packages = True
mypy_path = src

[flake8]
max-line-length = 88

[metadata]
name = stable_po_pre_commit
version = attr: stable_po_pre_commit.VERSION
description = This allows running of PyBabel in a configuration that creates stable PO files, to ensure they're not reordered or reformatted by editing tools.
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords =
license = BSD
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    babel
    click


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    stabilise_po = stable_po_pre_commit.cli:main